--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <fieldset>
                     <legend>Address for delivery:</legend>
                     <div>
-                        <input id="address" name="address" type="text"
+                        <input id="address" name="address" type="text">
                     </div>
                 </fieldset>
             </div>
@@ -95,6 +95,121 @@
                     </div>
                 </fieldset>
             </div>
+            <fieldset>
+                <legend>Would you like to choose or add toppings?</legend>
+                <div>
+                    <input type="radio" id="add" name="choose">
+                    <label for="add">Add Toppings</label>
+                </div>
+                <div>
+                    <input type="radio" id="choose" name="choose">
+                    <label for="choose">Choose Toppings</label>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Toppings:</legend>
+                <div>
+                    <input type="checkbox" id="pepperonitop" name="pepperonitop" value="pepperonitop">
+                    <label for="pepperonitop">Pepperoni</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="mushroom" name="mushroom" value="mushroom">
+                    <label for="mushroom">Mushroom</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="excheese" name="excheese" value="excheese">
+                    <label for="excheese">Extra Cheese</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="sausage" name="sausage" value="sausage">
+                    <label for="sausage">Sausage</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="onion" name="onion" value="onion">
+                    <label for="onion">Onion</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="black olives" name="black olives" value="black olives">
+                    <label for="black olives">Black Olives</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="green pepper" name="green pepper" value="green pepper">
+                    <label for="green pepper">Green pepper</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="tomato" name="tomato" value="tomato">
+                    <label for="tomato">Tomato</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="garlic" name="garlic" value="garlic">
+                    <label for="garlic">Garlic</label>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Would you like to have half of your pizza be one combination and the other half another combination</legend>
+                <div>
+                    <input type="radio" id="yes" name="customerans">
+                    <label for="yes">Yes</label>
+                </div>
+                <div>
+                    <input type="radio" id="no" name="customerans">
+                    <label for="no">No</label>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Half of Pizza:</legend>
+                <div>
+                    <input type="radio" id="pepperonihalf" name="pepperonihalf">
+                    <label for="pepperonihalf">Pepperoni Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="pineapplehalf" name="pineapplehalf">
+                    <label for="pineapplehalf">Hawaiian Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="supremehalf" name="supremehalf">
+                    <label for="supreme">Supreme Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="meathalf" name="meathalf">
+                    <label for="meat">Meat Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="cheesehalf" name="cheesehalf">
+                    <label for="cheese">Cheese Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="veggiehalf" name="veggiehalf">
+                    <label for="veggie">Veggie Half</label>
+                </div>
+            </fieldset>
+            <fieldset>
+                <legend>Other Half of Pizza:</legend>
+                <div>
+                    <input type="radio" id="pepperonihalf" name="pepperonihalf">
+                    <label for="pepperonihalf">Pepperoni Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="pineapplehalf" name="pineapplehalf">
+                    <label for="pineapplehalf">Hawaiian Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="supremehalf" name="supremehalf">
+                    <label for="supreme">Supreme Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="meathalf" name="meathalf">
+                    <label for="meat">Meat Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="cheesehalf" name="cheesehalf">
+                    <label for="cheese">Cheese Half</label>
+                </div>
+                <div>
+                    <input type="radio" id="veggiehalf" name="veggiehalf">
+                    <label for="veggie">Veggie Half</label>
+                </div>
+            </fieldset>
             <button type="button" onclick="alert('Free today for our Grand Opening!')">Calculate Cost</button>
             <button type="submit">Submit Order</button>
         </form>
